argocd/argocd-prod-2/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-demo-1-ingress
  namespace: argocd
  annotations: {}
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    # traefik.ingress.kubernetes.io/router.tls.options: default
spec:
  rules:
    - host: argocd-demo-1.kube-demo-1.home.clcreative.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd-demo-1.kube-demo-1.home.clcreative.de
      secretName: argocd-demo-1-tls-secret
